# word-problem

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  chess_demo.py  copying_task.py  depth_test.py  environment.yml  finetune.sh  generate_data.py  generate_data_state_tracking.py  launch-copy-ssm.slurm  launch-copy.slurm  launch-ids4.slurm  launch-mamba.slurm  launch-s4.slurm  launch-ssm.slurm  launch.slurm  main.py  pyproject.toml  requirements.txt  run-copy-ssm.sh  run-copy.sh  run-ids4.sh  run-mamba.sh  run-s4.sh  run-ssm.sh  run.sh  scratchpad.ipynb  singularity-ro.sh  singularity-rw.sh  singularity.sh
chessboard/: board_tracker.py  move.py  piece_type.py
data/: A4_x_Z5=10.csv  A4_x_Z5=11.csv  A4_x_Z5=12.csv  A4_x_Z5=14.csv  A4_x_Z5=15.csv  A4_x_Z5=16.csv  A4_x_Z5=17.csv  A4_x_Z5=18.csv  A4_x_Z5=19.csv  A4_x_Z5=2.csv  A4_x_Z5=20.csv  A4_x_Z5=3.csv  A4_x_Z5=4.csv  A4_x_Z5=5.csv  A4_x_Z5=6.csv  A4_x_Z5=7.csv  A4_x_Z5=8.csv  A4_x_Z5=9.csv  A5=10.csv  A5=11.csv  A5=12.csv  A5=13.csv  A5=14.csv  A5=15.csv  A5=16.csv  A5=17.csv  A5=18.csv  A5=19.csv  A5=2.csv  A5=20.csv  A5=3.csv  A5=4.csv  A5=4.csv.BACKUP  A5=5.csv  A5=6.csv  A5=7.csv  A5=8.csv  A5=8.csv.BACKUP  A5=9.csv  A_5=2.csv  (+371 more)
python/: tracker.py
src/: copying.py  finetune.py  generate_data.py  generate_data_state_tracking.py  main.py  train_copy.py
src/state_tracking/: python.py  tracker.py
src/state_tracking/chess/: board_tracker.py  move.py  piece_type.py
state_tracking/: python.py  tracker.py
state_tracking/chess/: __init__.py  board_tracker.py  move.py  piece_type.py
tests/: test_chess.py  test_data.py  test_python.py
