[project]

name = "word-problem"
version = "0.1.0"
description = "Studying how depth impacts transformers' ability to solve algebraic word problems."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Jackson Petty", email = "research@jacksonpetty.org" },
    { name = "William Merrill", email = "wcm9940@nyu.edu" }
]

dependencies = [
    "accelerate",
    "datasets",
    "evaluate",
    "fire",
    "abstract_algebra@git+https://github.com/jopetty/abstract_algebra",
    "sfirah@git+https://github.com/jopetty/sfirah",
    "humanize",
    "ipykernel",
    "numpy",
    "ordered-set",
    "polars",
    "pydotenv",
    "pyrootutils",
    "scikit-learn",
    "tokenizers",
    "torch",
    "torcheval",
    "tqdm",
    "transformers",
    "wandb",
]

[project.optional-dependencies]
dev = ["pre-commit"]

[tool.ruff]
select = ["D", "E", "F", "I", "N"]
line-length = 88
extend-include = ["*.ipynb"]
extend-exclude = [
    "data/",
    "src/state_tracking/*",
    "src/generate_data_state_tracking.py"
]
