[project]

name = "word-problem"
version = "0.1.0"
description = "Studying how depth impacts transformers' ability to solve algebraic word problems."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Jackson Petty", email = "research@jacksonpetty.org" },
    { name = "William Merrill", email = "wcm9940@nyu.edu" }
]

dependencies = [
    "accelerate >= 0.24",
    "datasets >= 2.15",
    "evaluate >= 0.4",
    "fire >= 0.5",
    "abstract_algebra @ git+https://github.com/jopetty/abstract_algebra",
    "sfirah [ssm] @ git+https://github.com/jopetty/sfirah ; sys_platform != 'darwin'",
    "sfirah @ git+https://github.com/jopetty/sfirah ; sys_platform == 'darwin'",
    "humanize >= 4.9",
    "ipykernel >= 6.27",
    "numpy >= 1.26",
    "ordered-set >= 4.1",
    "polars >= 0.19",
    "pydotenv >= 0.0",
    "pyrootutils >= 1.0",
    "scikit-learn >= 1.3",
    "tokenizers >= 0.15",
    "torch >= 2.1",
    "torcheval >= 0.0",
    "tqdm >= 4.66",
    "transformers >= 4.35",
    "wandb >= 0.16",
]

[project.optional-dependencies]
dev = ["pre-commit"]

[tool.ruff]
select = ["D", "E", "F", "I", "N"]
line-length = 88
extend-include = ["*.ipynb"]
extend-exclude = [
    "data/",
    "src/state_tracking/*",
    "src/generate_data_state_tracking.py"
]
